# stacker

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SESSION_HANDOFF.md  dfx.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
canisters/game_scores/: Cargo.toml
canisters/game_scores/src/: lib.rs
canisters/points_ledger/: Cargo.toml  points_ledger.did
canisters/points_ledger/src/: lib.rs
canisters/points_ledger/tests/: integration.rs
docs/: bundle-baseline.md
public/: tick-status.html
scripts/: ic-build.mjs  prod-build-check.mjs
src/app/: error.tsx  global-error.tsx  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts
src/components/: AppFooter.tsx  AppHeader.tsx  AppShell.tsx  BottomNav.tsx  (+6 more)
test/: activityFilter.contract.test.mjs  clipboard.contract.test.mjs  demoRates.contract.test.mjs  errorScaffoldAutoRetry.contract.test.mjs  errorScaffoldCatalogue.contract.test.mjs  formatLWP.contract.test.mjs  livestreamCycle.contract.test.mjs  ltc.contract.test.mjs  mapBuyError.contract.test.mjs  mapLtcWithdrawError.contract.test.mjs  mapTransferError.contract.test.mjs  mirrorSync.contract.test.mjs  notFoundDidYouMean.contract.test.mjs  parseLWP.contract.test.mjs  prefs.contract.test.mjs  principal.contract.test.mjs  recentRecipients.contract.test.mjs  routesCatalogue.contract.test.mjs  sendDeepLink.contract.test.mjs  sendHandleDeepLink.contract.test.mjs  shortCanister.contract.test.mjs  toastReducer.contract.test.mjs  txIdDisplay.contract.test.mjs
(+121 files in other folders)
